k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-herencia-api
  namespace: herencia
spec:
  stripPrefix:
    prefixes:
      - /herencia
