k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-herencia-backend
  namespace: herencia
  labels:
    app: gestion-herencia-backend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: gestion-herencia-backend
